--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,6 +6,7 @@ pipeline {
         stage('Build') {
             steps {
                 sh '''
+			chmod +x /jenkins/build/build.sh
 			./jenkins/build/mvn.sh mvn -B -DskipTests clean package
 			./jenkins/build/build.sh
                     '''   
