--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
         stage('Build') {
             steps {
                 sh '''
-			chmod -R 777 ./jenkins/
+			chmod -R 777 jenkins java-app jenkinsfile
 			./jenkins/build/mvn.sh mvn -B -DskipTests clean package
 			./jenkins/build/build.sh
                     '''   
